--- a/courses/take5/index.html
+++ b/courses/take5/index.html
@@ -140,7 +140,7 @@ css: [/css/take5.css]
                     </a>
                   </div>
                   <footer>
-                    <p><b>{{ item.course_type | replace: 'take5', 'Tutorial' }}</b></p>
+                    <p><b>{{ item.type | replace: 'take5', 'Tutorial' }}</b></p>
                     <p>{{ item.skill_level }}</p>
                   </footer>
                 </article><!-- .tutorial -->
