--- a/courses/full/course-list-recent.html
+++ b/courses/full/course-list-recent.html
@@ -32,7 +32,7 @@ permalink: /courses/full/course-list-recent
 {%- assign publish_order = publish_order | uniq | join: ', ' | split: ', ' -%}
 
 {%- for item in publish_order -%}
-  {%- if site.data.courses[item].live == true and site.data.courses[item].course_type == "full" -%}
+  {%- if site.data.courses[item].live == true and site.data.courses[item].type == "full" -%}
     {%- assign recent = recent | push: site.data.courses[item].id -%}
   {%- endif -%}
 {%- endfor -%}
