lowercase & liquid extensions

--- a/courses/index.html
+++ b/courses/index.html
@@ -35,7 +35,7 @@ permalink: /courses/
               {{ main.full_courses.format }}
             </h2>
             <p class="hero">
-              {{ main.full_courses.hero_text }} <a href="{{ site.gymurl }}/courses/full"><b>{{ main.full_courses.hero_CTA }}</b></a>
+              {{ main.full_courses.hero_text }} <a href="{{ site.gymurl }}/courses/full"><b>{{ main.full_courses.hero_cta }}</b></a>
             </p>
             <div class="promo">
               <div class="row">
@@ -99,7 +99,7 @@ permalink: /courses/
               {{ main.gym_shorts.format }}
             </h2>
             <p class="hero">
-              {{ main.gym_shorts.hero_text }} <a href="{{ site.gymurl }}/courses/gym-shorts"><b>{{ main.gym_shorts.hero_CTA }}</b></a>
+              {{ main.gym_shorts.hero_text }} <a href="{{ site.gymurl }}/courses/gym-shorts"><b>{{ main.gym_shorts.hero_cta }}</b></a>
             </p>
             <div class="promo">
               <div class="row">
@@ -163,7 +163,7 @@ permalink: /courses/
               {{ main.take5_tutorials.format }}
             </h2>
             <p class="hero">
-              {{ main.take5_tutorials.hero_text }} <a href="{{ site.gymurl }}/courses/gym-shorts"><b>{{ main.take5_tutorials.hero_CTA }}</b></a>
+              {{ main.take5_tutorials.hero_text }} <a href="{{ site.gymurl }}/courses/gym-shorts"><b>{{ main.take5_tutorials.hero_cta }}</b></a>
             </p>
             <div class="promo">
               <div class="row">
@@ -227,7 +227,7 @@ permalink: /courses/
               {{ main.collections.format }}
             </h2>
             <p class="hero">
-              {{ main.collections.hero_text }} <a href="{{ site.gymurl }}/collections"><b>{{ main.collections.hero_CTA }}</b></a>
+              {{ main.collections.hero_text }} <a href="{{ site.gymurl }}/collections"><b>{{ main.collections.hero_cta }}</b></a>
             </p>
             <div class="promo">
               <div class="row">
