Update courses main page
- Update link to Take 5 tutorials

--- a/courses/index.html
+++ b/courses/index.html
@@ -163,7 +163,7 @@ permalink: /courses/
               {{ main.take5_tutorials.format }}
             </h2>
             <p class="hero">
-              {{ main.take5_tutorials.hero_text }} <a href="{{ site.gymurl }}/courses/gym-shorts"><b>{{ main.take5_tutorials.hero_CTA }}</b></a>
+              {{ main.take5_tutorials.hero_text }} <a href="{{ site.gymurl }}/courses/take5"><b>{{ main.take5_tutorials.hero_CTA }}</b></a>
             </p>
             <div class="promo">
               <div class="row">
