Update page content
- Add Open edX 2015 archive link

--- a/static-pages/anniversary/index.html
+++ b/static-pages/anniversary/index.html
@@ -130,7 +130,7 @@ css: [/css/static-main-content.css]
   <article>
     <p class="date"><b>2015</b></p>
     <h2>Gymnasium Relaunch on Open edX (Version 2)</h2>
-    <p>Aquent Gymnasium relaunches in November 2015, built on the Open edX platform, developed by MIT, Harvard, and edX.</p>
+    <p>Aquent Gymnasium relaunches in November 2015, built on the <a hef="https://web.archive.org/web/20151106065611/https://open.edx.org/" target="_blank" rel="noopener">Open edX</a> platform, developed by MIT, Harvard, and edX.</p>
     <div class="images">
       <figure>
       <img alt="" src="{{ img_path }}homepages/gym-homepage-hero-2016-01-11-1920w.jpg" width="1920" height="1080" decoding="async">
