Update page content
- Update headings
- Add milestones
- Update metadata
- Add OG image

--- a/static-pages/anniversary/index.html
+++ b/static-pages/anniversary/index.html
@@ -15,7 +15,7 @@ css: [/css/static-main-content.css]
 
   <article>
     <p class="date"><b>2012</b></p>
-    <h2><cite>Summer of Learning</cite> Pilot</h2>
+    <h2>Summer of Learning Pilot</h2>
     <p>Aquent shows the creative community some love during the <cite>Summer of Learning</cite> in 2012 by providing creative professionals classes on HTML5 and career skills.</p>
     <div class="images">
       <figure>
@@ -26,7 +26,7 @@ css: [/css/static-main-content.css]
       </figure>
       <figure>
         <div class="iframe-video-holder">
-          <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/_NSJd_0BkF0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/_NSJd_0BkF0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <figcaption>
         <small>Aquent’s Summer of Learning webcast <cite>Transform HTML Into HTML5</cite> on <a href="https://www.youtube.com/@TheSummerOfLearning" target="_blank" rel="noopener">YouTube</a>.</small>
@@ -45,12 +45,12 @@ css: [/css/static-main-content.css]
 
   <article>
     <p class="date"><b>2013</b></p>
-    <h2>Aquent Gymnasium Launch</h2>
+    <h2>Aquent Gymnasium Launches</h2>
     <p>Aquent Gymnasium officially launches with two full courses following the success of the Summer of Learning — first <cite>Coding for Designers</cite> (July) and then <cite>Responsive Web Design</cite> (October) in 2013.</p>
     <div class="images">
       <figure>
         <div class="iframe-video-holder">
-          <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/snmz3M2RUBo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/snmz3M2RUBo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <figcaption>
         <small>Aquent Gymnasium promo video from July 2013.</small>
@@ -58,7 +58,7 @@ css: [/css/static-main-content.css]
       </figure>
       <figure>
         <div class="iframe-video-holder aspect-legacy-1">
-          <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/qYqIS2CSH28" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/qYqIS2CSH28" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <figcaption>
         <small>Aquent Gymnasium Launch Party — London</small>
@@ -66,7 +66,7 @@ css: [/css/static-main-content.css]
       </figure>
       <figure>
         <div class="iframe-video-holder aspect-legacy-2">
-          <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/4PiVJvIzX_Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/4PiVJvIzX_Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <figcaption>
         <small><cite>Responsive Web Design</cite> course promo</small>
@@ -102,11 +102,11 @@ css: [/css/static-main-content.css]
 
   <article>
     <p class="date"><b>2014</b></p>
-    <h2><cite>Gym Shorts</cite> Drop</h2>
-    <p>Gymnasium releases the short course format Gym Shorts, learning within an hour or less, with <cite><a href="https://thegymnasium.com/courses/GYM/001/0/about">Defeating Busy</a></cite> with Brett Harned, teaching you how to estimate, plan, track, and manage your time to complete projects.</p>
+    <h2>Gym Shorts Drop</h2>
+    <p>Gymnasium releases the short course format Gym Shorts, learning within an hour or less, with <cite><a href="https://thegymnasium.com/courses/GYM/001/0/about">Defeating Busy</a></cite>.</p>
     <figure>
       <div class="iframe-video-holder">
-        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/I1KGMtQBFs0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/I1KGMtQBFs0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>
       <figcaption>
       <small>Aquent Gymnasium: Behind the Scenes (2014)</small>
@@ -129,15 +129,15 @@ css: [/css/static-main-content.css]
 
   <article>
     <p class="date"><b>2015</b></p>
-    <h2>Gymnasium Relaunch on Open edX (Version 2)</h2>
-    <p>Aquent Gymnasium relaunches in November 2015, built on the <a hef="https://web.archive.org/web/20151106065611/https://open.edx.org/" target="_blank" rel="noopener">Open edX</a> platform, developed by MIT, Harvard, and edX.</p>
+    <h2>Relaunch on Open edX</h2>
+    <p>Gymnasium relaunches in November 2015, built on the <a hef="https://web.archive.org/web/20151106065611/https://open.edx.org/" target="_blank" rel="noopener">Open edX</a> platform, developed by MIT, Harvard, and edX.</p>
     <div class="images">
       <figure>
-      <img alt="" src="{{ img_path }}homepages/gym-homepage-hero-2016-01-11-1920w.jpg" width="1920" height="1080" decoding="async">
-      <figcaption>
-        <small> Gymnasium <a href="https://web.archive.org/web/20160306065332/http://gymnasium.aquent.com/" target="_blank" rel="noopener">homepage</a> in late 2015 (and 2016).</small>
-      </figcaption>
-    </figure>
+        <img alt="" src="{{ img_path }}homepages/gym-homepage-hero-2016-01-11-1920w.jpg" width="1920" height="1080" decoding="async">
+        <figcaption>
+          <small>Gymnasium <a href="https://web.archive.org/web/20160306065332/http://gymnasium.aquent.com/" target="_blank" rel="noopener">homepage</a> in late 2015 (and 2016).</small>
+        </figcaption>
+      </figure>
     </div>
     <aside>
       <h3>From the Archives</h3>
@@ -150,12 +150,12 @@ css: [/css/static-main-content.css]
 
   <article>
     <p class="date"><b>2015</b></p>
-    <h2>Live Coding on Twitch</h2>
-    <p>Aquent Gymnasium livestreams (former) Director of Technology Mike Bifulco’s weekly live, in the wild, open development on Twitch in December 2015 — available on the Gymnasium <a href="https://www.youtube.com/watch?v=YOG8_QKrhRs&list=PL0Y6L6nQtNzfvDq2rzNJ0YbjvHebRyEom" target="_blank" rel="noopener">YouTube</a> channel.</p>
+    <h2>Now Streaming: Live Coding</h2>
+    <p>Gymnasium livestreams (former) Director of Technology Mike Bifulco’s weekly live, in the wild, open development on Twitch in December 2015 — available on the Gymnasium <a href="https://www.youtube.com/watch?v=YOG8_QKrhRs&list=PL0Y6L6nQtNzfvDq2rzNJ0YbjvHebRyEom" target="_blank" rel="noopener">YouTube</a> channel.</p>
     <div class="images">
       <figure>
         <div class="iframe-video-holder">
-          <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/YOG8_QKrhRs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/YOG8_QKrhRs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <figcaption>
         <small>Live Coding, weekly, from 2017 to 2019.</small>
@@ -166,29 +166,51 @@ css: [/css/static-main-content.css]
 
   <article>
     <p class="date"><b>2016</b></p>
-    <h2>Gymnasium Release Webinars</h2>
+    <h2>Now Streaming: Webinars</h2>
     <p>Aquent Gymnasium releases their first of many <a href="https://thegymnasium.com/webinars">webinars</a> in April 2015, <cite><a href="https://thegymnasium.com/webinars/designing-for-understanding">Designing for Understanding</a></cite> with Stephanie Hay.</p>
     <div class="images">
       <figure>
-      <div class="iframe-video-holder">
-        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/5W7sJzfPwjQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-      </div>
-      <figcaption>
-      <small>Designing for Understanding</a></cite> webinar with Stephanie Hay.</small>
-      </figcaption>
-    </figure>
+        <div class="iframe-video-holder">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/5W7sJzfPwjQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <figcaption>
+        <small>Designing for Understanding</a></cite> webinar with Stephanie Hay.</small>
+        </figcaption>
+      </figure>
     </div>
     <aside>
       <h3>From the Archives</h3>
       <ul>
-        <li><a href="https://www.foxbusiness.com/features/training-workers-the-netflix-way-moocs-in-the-job-industry">Training Workers the Netflix Way: MOOCs in the Job Industry</a></li>
+        <li><a href="https://bigwebshow.fireside.fm/148" target="_blank" rel="noopener"><cite>The Big Web Show</cite>: Web Design in 2016 with Jeremy Osborn of Aquent Gymnasium</a></li>
+        <li><a href="https://www.foxbusiness.com/features/training-workers-the-netflix-way-moocs-in-the-job-industry" target="_blank" rel="noopener">Training Workers the Netflix Way: MOOCs in the Job Industry</a></li>
       </ul>
     </aside>
   </article>
 
   <article>
+    <p class="date"><b>2016</b></p>
+    <h2>Your App is Ugly</h2>
+    <p>Gymnasium presents <cite><a href="https://www.slideshare.net/mbifulco1/your-app-is-ugly" target="_blank" rel="noopener">Your App is Ugly: Design for Coders</a></cite>, a talk about the basics of design and aesthetics, covering color theory, swiss design, and some of the historical roots of modern design hosted by Aquent and <a href="https://www.numa.co" target="_blank" rel="noopener">Numa</a> Paris in May 2016.</p>
+  </article>
+
+  <article>
+    <p class="date"><b>2016</b></p>
+    <h2>Open Classroom</h2>
+    <p>Gymnasium launches a collaboration with <a href="https://openclassrooms.com" target="_blank" rel="noopener">OpenClassrooms</a>, a learning platform based in France, with a course on how to build wireframes and prototypes with Sketch.</p>
+  </article>
+
+  <article>
     <p class="date"><b>2017</b></p>
-    <h2>TK</h2>
+    <h2>Gymnasium Moderates An Event Apart Panel</h2>
+    <p>In Seattle, Director of Learning Jeremy Osborn hosts the first of many panels at the <cite><a href="https://aneventapart.com/news/post/resources-from-seattle-2017" target="_blank" rel="noopener">An Event Apart</a></cite> web conference in 2017.</p>
+    <div class="images">
+      <figure>
+        <img alt="" src="{{ img_path }}/talks/how-to-stay-inspired-panel-2017-1280w.jpg" width="1280" height="800" decoding="async">
+        <figcaption>
+          <small>Jeremy Osborn talking with <a href="https://chriscoyier.net" target="_blank" rel="noopener">Chris Coyier</a>, <a href="https://valhead.com" target="_blank" rel="noopener">Val Head</a>, and <a href="https://www.zeldman.com" target="_blank" rel="noopener">Jeffrey Zeldman</a>.</small>
+        </figcaption>
+      </figure>
+    </div>
     <aside>
       <h3>From the Archives</h3>
       <ul>
@@ -199,8 +221,8 @@ css: [/css/static-main-content.css]
 
   <article>
     <p class="date"><b>2018</b></p>
-    <h2>Badges for <cite>Gym Shorts</cite></h2>
-    <p>Aquent Gymnasium launches badges for <cite>Gym Shorts</cite> with the release of Brad Frost’s course <cite><a href="https://thegymnasium.com/courses/course-v1:GYM+014+0/about">Working with Atomic Design and Pattern Lab</a></cite> in the summer of 2018.</p>
+    <h2>Badges for Gym Shorts</h2>
+    <p>Gymnasium launched badges for <cite>Gym Shorts</cite> with the release of Brad Frost’s course <cite><a href="https://thegymnasium.com/courses/course-v1:GYM+014+0/about">Working with Atomic Design and Pattern Lab</a></cite> in the summer of 2018.</p>
     <div class="images">
       <figure>
         <img alt="" src="{{ img_path }}homepages/gym-homepage-hero-badges-2018-1920w.jpg" width="1920" height="1080" decoding="async">
@@ -241,7 +263,7 @@ css: [/css/static-main-content.css]
 
   <article>
     <p class="date"><b>2019</b></p>
-    <h2>Take 5 Tutorials </h2>
+    <h2>Take 5 Tutorials</h2>
     <p>Gymnasium releases <a href="http://thegymnasium.com/courses/take5/">Take 5</a> tutorials, a five-minute video-based course format for learning from industry experts.</p>
     <div class="images">
       <figure>
@@ -250,7 +272,7 @@ css: [/css/static-main-content.css]
         <small>Gymnasium Take 5 tutorials landing page from it’s initial release week (and month, also known as, the “blitz”) in late October, early November 2019.</small>
         </figcaption>
       </figure>
-        <figure>
+      <figure>
         <img alt="" src="{{ img_path }}social/gym-take5-instagram-2019-11-22-1920w.jpg" width="1920" height="1080" decoding="async">
         <figcaption>
         <small><a href="https://www.instagram.com/p/B5L-EtyAWQS/" target="_blank" rel="noopener">Instagram</a> post celebrating 20 days of Take 5 tutorials in late November.</small>
@@ -262,18 +284,28 @@ css: [/css/static-main-content.css]
   <article>
     <p class="date"><b>2020</b></p>
     <h2>Gymnasium Wins Second Elevate Award</h2>
-    <p>Aquent Gymnasium wins a second American Staffing Association <a href="https://medium.com/gymnasium/aquent-gymnasium-wins-asa-elevate-award-again-d97fe0841a57" target="_blank" rel="noopener">Elevate Award</a> in September 2020, honoring the most outstanding work-based learning programs in the staffing and recruiting industry.</p>
+    <p>Yup, you read that right. We won another <a href="https://medium.com/gymnasium/aquent-gymnasium-wins-asa-elevate-award-again-d97fe0841a57" target="_blank" rel="noopener">Elevate Award</a>.</p>
+    <div class="images">
+      <figure>
+        <div class="iframe-video-holder">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/ZsOAOWr4tG8?start=53" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <figcaption>
+        <small>Aquent Gymnasium for the win, again!</small>
+        </figcaption>
+      </figure>
+    </div>
   </article>
 
   <article>
     <p class="date"><b>2022</b></p>
-    <h2>Gymnasium Launch <cite>Portfolio Workshop</cite> Pilot</h2>
-    <p>Aquent Gymnasium launches its live, real-time online <cite><a href="https://thegymnasium.com/workshops">Improving Your Portfolio</a></cite> workshop.</p>
+    <h2>Portfolio Workshop Pilot</h2>
+    <p>Gymnasium launches its first live, real-time online <cite><a href="https://thegymnasium.com/workshops">Improving Your Portfolio</a></cite> workshop.</p>
     <div class="images">
       <figure>
         <img alt="" src="{{ img_path }}courseware/gym-workshops-portfolio-2022-12-5-1920w.jpg" width="1920" height="1080" decoding="async">
         <figcaption>
-        <small>Gymnasium’s first-ever live, real-time, week-long online course in December 2022.</small>
+        <small>Gymnasium’s first-ever week-long online course in December 2022.</small>
         </figcaption>
       </figure>
       <figure>
@@ -288,8 +320,42 @@ css: [/css/static-main-content.css]
   <article>
     <p class="date"><b>2023</b></p>
     <h2>10 Years of Free Online Learning</h2>
-    <p>Aquent Gymnasium celebrates 10 years of providing free online learning with courses, tutorials, articles, and webinars on design, development, UX, accessibility, and career skills from industry experts to anyone, anywhere in the world.</p>
+    <p>Gymnasium celebrates 10 years of providing free online learning with courses, tutorials, articles, and webinars on design, development, UX, accessibility, and career skills from industry experts to anyone, anywhere in the world.</p>
     <div class="images">
+    </div>
+  </article>
+
+  <article>
+    <p class="date"><b>2023</b></p>
+    <h2>Back to Design Basics</h2>
+    <p>We’ve been trailblazers in the web community since launching in 2013 — shoutout to iPhone 5s and Vine.</p>
+    <p>To celebrate, we just dropped these 5-minute tutorials on design basics taught by Meagan Fisher.</p>
+    <p>Celebrate with us and <a href="https://www.youtube.com/watch?v=MPxEtMX-rqI&list=PL0Y6L6nQtNzd3XnFuT7IwqDunTyOnUVh2">design like a pro</a>!
+    <div class="images">
+      <figure>
+        <div class="iframe-video-holder">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/MPxEtMX-rqI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <figcaption>
+        <small><cite>Getting Contrast Right in Your Typography</cite></small>
+        </figcaption>
+      </figure>
+      <figure>
+        <div class="iframe-video-holder">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/KrN5qckZ7iA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <figcaption>
+        <small><cite>Creating an Effective Color Palette in Design</cite></small>
+        </figcaption>
+      </figure>
+      <figure>
+        <div class="iframe-video-holder">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/BBjSq0PtgTs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <figcaption>
+        <small><cite>Leveling Up Your Layouts in Web Design</cite></small>
+        </figcaption>
+      </figure>
     </div>
   </article>
 
