Update anniversary page
- Add main element and fragment
- Add main fragment scroll offset
- Update attribute misspell
- Update stray tags
- Add image width and height values
- Update elevate award images (optimization)

--- a/static-pages/anniversary/index.html
+++ b/static-pages/anniversary/index.html
@@ -7,7 +7,10 @@ css: [/css/static-main-content.css]
 {%- assign img_path = "/img/static-pages/anniversary/" | prepend: site.url -%}
 
 <!-- Temporary HTML for style hooks -->
-<div class="main-content-static" id="anniversary">
+
+<main class="main-content-static" id="main">
+
+<article id="anniversary">
 
   <h1>10 Years of Aquent Gymnasium</h1>
 
@@ -19,7 +22,7 @@ css: [/css/static-main-content.css]
     <p>Aquent shows the creative community some love during the <cite>Summer of Learning</cite> in 2012 by providing creative professionals classes on HTML5 and career skills.</p>
     <div class="images">
       <figure>
-        <img alt="The Summer of Learning homepage hero." src="{{ img_path }}homepages/gym-homepage-hero-2012-08-24-1920w.jpg" width="" height="" decoding="async">
+        <img alt="The Summer of Learning homepage hero." src="{{ img_path }}homepages/gym-homepage-hero-2012-08-24-1920w.jpg" width="1920" height="1080" decoding="async">
         <figcaption>
         <small>Aquent’s <a href="https://web.archive.org/web/20120824001413/http://www.thesummeroflearning.com/?src=sol-aq-home-0712" target="_blank" rel="noopener">thesummeroflearning.com</a> homepage circa July 2012.</small>
         </figcaption>
@@ -73,19 +76,19 @@ css: [/css/static-main-content.css]
         </figcaption>
       </figure>
       <figure>
-        <img alt="Gymnasium homepage circa 2013 with original yellow color theme." src="{{ img_path }}homepages/gym-homepape-hero-2013-06-06-1920w.jpg" width="" height="" decoding="async">
+        <img alt="Gymnasium homepage circa 2013 with original yellow color theme." src="{{ img_path }}homepages/gym-homepape-hero-2013-06-06-1920w.jpg" width="1920" height="1080" decoding="async">
         <figcaption>
         <small>Gymnasium <a href="https://web.archive.org/web/20130606210459/http://www.thegymnasium.com/" target="_blank" rel="noopener">homepage</a> (soft launch) with original torch logo and yellow color theme in June 2013.</small>
         </figcaption>
       </figure>
       <figure>
-        <img alt="Gymnasium homepage circa 2013 with updated Aquent orange color theme." src="{{ img_path }}homepages/gym-homepage-hero-2013-10-19-1920w.jpg" width="" height="" decoding="async">
+        <img alt="Gymnasium homepage circa 2013 with updated Aquent orange color theme." src="{{ img_path }}homepages/gym-homepage-hero-2013-10-19-1920w.jpg" width="1920" height="1080" decoding="async">
         <figcaption>
-        <small> Gymnasium <a href="https://web.archive.org/web/20131019214057/http://thegymnasium.com/" target="_blank" rel="noopener">homepage</a> with Aquent orange theme rebrand in October 2013.</small>
+        <small>Gymnasium <a href="https://web.archive.org/web/20131019214057/http://thegymnasium.com/" target="_blank" rel="noopener">homepage</a> with Aquent orange theme rebrand in October 2013.</small>
         </figcaption>
       </figure>
       <figure>
-        <img alt="Gymnasium catalog with its first two courses in 2013." src="{{ img_path }}homepages/gym-catalog-2013-11-07-1920w.jpg" width="" height="" decoding="async">
+        <img alt="Gymnasium catalog with its first two courses in 2013." src="{{ img_path }}homepages/gym-catalog-2013-11-07-1920w.jpg" width="1920" height="1080" decoding="async">
         <figcaption>
         <small>The <a href="https://web.archive.org/web/20131123134750/http://thegymnasium.com/catalog" target="_blank" rel="noopener">catalog</a> featuring <cite>Coding for Designers</cite> (July) and <cite>Responsive Web Design</cite> (October) in 2013.</small>
         </figcaption>
@@ -115,7 +118,7 @@ css: [/css/static-main-content.css]
     <figure>
       <img alt="" src="{{ img_path }}homepages/gym-homepage-hero-2015-08-11-1920w.jpg" width="1920" height="1080" decoding="async">
       <figcaption>
-        <small> Gymnasium <a href="https://archive.li/FwO73" target="_blank" rel="noopener">homepage</a> in 2014 (and 2015).</small>
+        <small>Gymnasium <a href="https://archive.li/FwO73" target="_blank" rel="noopener">homepage</a> in 2014 (and 2015).</small>
       </figcaption>
     </figure>
     <aside>
@@ -130,7 +133,7 @@ css: [/css/static-main-content.css]
   <article>
     <p class="date"><b>2015</b></p>
     <h2>Relaunch on Open edX</h2>
-    <p>Gymnasium relaunches in November 2015, built on the <a hef="https://web.archive.org/web/20151106065611/https://open.edx.org/" target="_blank" rel="noopener">Open edX</a> platform, developed by MIT, Harvard, and edX.</p>
+    <p>Gymnasium relaunches in November 2015, built on the <a href="https://web.archive.org/web/20151106065611/https://open.edx.org/" target="_blank" rel="noopener">Open edX</a> platform, developed by MIT, Harvard, and edX.</p>
     <div class="images">
       <figure>
         <img alt="" src="{{ img_path }}homepages/gym-homepage-hero-2016-01-11-1920w.jpg" width="1920" height="1080" decoding="async">
@@ -174,7 +177,7 @@ css: [/css/static-main-content.css]
           <iframe width="560" height="315" src="https://www.youtube.com/embed/5W7sJzfPwjQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <figcaption>
-        <small>Designing for Understanding</a></cite> webinar with Stephanie Hay.</small>
+        <small><cite>Designing for Understanding</cite> webinar with Stephanie Hay.</small>
         </figcaption>
       </figure>
     </div>
@@ -252,6 +255,12 @@ css: [/css/static-main-content.css]
     <h2>Gymnasium Wins Elevate Award</h2>
     <p>Aquent Gymnasium wins the American Staffing Association’s first-ever <a href="https://www.prnewswire.com/news-releases/american-staffing-association-honors-most-outstanding-work-based-learning-programs-in-staffing-and-recruiting-industry-300714691.html" target="_blank" rel="noopener">Elevate Award</a> in October 2018, honoring the most outstanding work-based learning programs in the staffing and recruiting industry.</p>
     <div class="images">
+      <figure>
+        <img alt="" src="{{ img_path }}awards/gym-elevate-award-miller-janey-2018-720w.jpg" width="720" height="1080" decoding="async">
+        <figcaption>
+        <small>Gymnasium’s Andrew Miller and Keir Kaney accepting the Elevate Award.</small>
+        </figcaption>
+      </figure>
       <figure>
         <img alt="" src="{{ img_path }}awards/gym-asa-elevate-award-2018-1920w.jpg" width="1920" height="1080" decoding="async">
       <figcaption>
@@ -359,6 +368,12 @@ css: [/css/static-main-content.css]
     </div>
   </article>
 
-</div><!-- .main-content-static -->
+  <div class="to-top-link">
+    <a href="#main"><b>Back to top</b></a>
+  </div>
+
+</article>
+
+</main><!-- .main-content-static -->
 
 <!-- / Temporary HTML for style hooks -->
